Added Arb Nat, String, and some helpers.

--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "purescript-maybe": "*",
     "purescript-either": "*",
     "purescript-tuples": "*",
-    "purescript-exceptions": "*"
+    "purescript-exceptions": "*",
+    "purescript-math": "*"
   }
 }
