--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp":             "^3.8.8",
     "gulp-purescript":  "0.0.10",
     "gulp-run":         "^1.6.4",
-    "run-sequence":     "^1.0.1"
+    "run-sequence":     "^1.0.1",
+    "gulp-jsvalidate":  "~1.0.1"
   }
 }
