--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,6 @@
     "purescript-lists": "~0.7.0",
     "purescript-random": "~0.2.0",
     "purescript-strings": "~0.5.0",
-    "purescript-free": "~0.5.0"
+    "purescript-tailrec": "~0.3.0"
   }
 }
