--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "purescript-lists": "^0.7.0",
     "purescript-random": "^0.2.0",
     "purescript-strings": "^0.7.0",
-    "purescript-transformers": "^0.6.1"
+    "purescript-transformers": "^0.6.1",
+    "purescript-generics": "~0.5.0"
   }
 }
