--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,8 @@
     "purescript-lists": "^3.0.0",
     "purescript-random": "^2.0.0",
     "purescript-strings": "^2.0.0",
-    "purescript-transformers": "^2.0.0"
+    "purescript-transformers": "^2.0.0",
+    "purescript-enums": "^2.0.1",
+    "purescript-partial": "^1.2.0"
   }
 }
